force-app/main/default/objects/Routing_Priority__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When unchecked, this priority sort specification is excluded from the ORDER BY clause. Allows admins to disable a sort criterion without deleting the record.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>