force-app/main/default/objects/Routing_Priority__mdt/fields/Null_Handling__c.field-meta.xml
<CustomField>
    <fullName>Null_Handling__c</fullName>
    <description>Controls placement of null values in the sort order.</description>
    <label>Null Handling</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NULLS FIRST</fullName>
            </value>
            <value>
                <fullName>NULLS LAST</fullName>
                <default>true</default>
                <label>NULLS LAST</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>