force-app/main/default/objects/Routing_Priority__mdt/fields/Routing_Config__c.field-meta.xml
<CustomField>
    <fullName>Routing_Config__c</fullName>
    <description>Parent Routing Config record. Links this priority sort specification to a routing scenario.</description>
    <label>Routing Config</label>
    <referenceTo>Routing_Config__mdt</referenceTo>
    <relationshipLabel>Routing Priorities</relationshipLabel>
    <relationshipName>Routing_Priorities</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>